--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -24,7 +24,7 @@ $font_path: "~@/assets/fonts/";
 .v-tab,
 .v-data-table-header,
 .v-data-footer,
-.v-btn__content,label {
+.v-btn__content,label,.iranSansBold {
   font-family: IRANSansWeb-FaNum-Bold !important;
 }
 
